# pcgvs

./: .gitignore  README.md  cli.py  requirements.txt  setup.cfg
notebooks/: 1. Bounding Box Tagging.ipynb  2. Extract Patches and Background.ipynb  3. Tube Rearrangement.ipynb  4. Video Synopsis generation.ipynb  5. Video Synopsis on synthetic data.ipynb  6. Video Synopsis on synthetic data.ipynb  6. Video Synopsis on synthetic dataset.ipynb  Bounding Box Tagging.ipynb  Create Video Synopsis.ipynb  Extract Patches.ipynb  Extract Sub-Images.ipynb  Graph Collision Video Synopsis.ipynb  README.md  Tube Rearrangement.ipynb  notes.md
notebooks/.ipynb_checkpoints/: Graph Collision Video Synopsis-checkpoint.ipynb
notebooks/data/: adjacency_matrix.txt  video-1-synopsis.csv
notebooks/notes/: Graph Collision Video Synopsis.ipynb  Synopsis generation and Interpolation.ipynb
samples/: extract_background.py  extract_sub_images_from_extracted_tubes.py  extract_tubes.py  graph_coloring_from_extracted_tubes.py
src/pcgvs/aggregation/: __init__.py  coloring.py  graph.py  relations.py
src/pcgvs/extraction/: __init__.py  track.py
src/pcgvs/extraction/strong_sort/deep/reid/torchreid/metrics/: rank.py
src/pcgvs/metrics/: __init__.py
src/pcgvs/pcg/: coloring.py  graph.py  relations.py
src/pcgvs/synopsis/: __init__.py
