[metadata]
name = pcgvs
description = Potential collision graph based video synopsis.
author = Luigi Seminara, Lemuel Puglisi
license = MIT
platform = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    pcgvs
install_requires =
    numpy
    opencv-python
    networkx
    pandas

python_requires = >= 3.6
package_dir = 
    =src
zip_safe = no
